# xournalpp_htr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  INSTALL_HF_DOCKER_SPACE.sh  INSTALL_LINUX.sh  Makefile  README.md  README_HF.md  activate_env.sh  fix_empty_file_crash_test.sh  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_training.txt  setup.py
.claude/: settings.json
architecture/: index.html
contributing/: index.html
data_collection/: index.html
datasets_literature_review/: index.html
demo_setup/: index.html
developer_guide/: index.html
developing_new_models/: index.html
docs/: 2024-08-27-22-52_unit_calculations.xoj  architecture.md  contributing.md  data_collection.md  datasets_literature_review.md  demo_setup.md  developer_guide.md  developing_new_models.md  funding.md  huggingface_docker_space_deployment.md  index.md  installation.md  installation_developer.md  installation_user.md  labels.md  marketing.md  pyinstaller_experiment.md  roadmap.md  user_guide.md
funding/: index.html
huggingface_docker_space_deployment/: index.html
installation_developer/: index.html
installation_user/: index.html
labels/: index.html
models/: index.html
notebooks/: example_notebook.ipynb  example_notebook_main.ipynb  experiment_with_IAM_OnDo_dataset.ipynb  experiment_with_clustering_for_online_word_detection.ipynb  experiment_with_text_layer.ipynb
plugin/: config.lua  copy_to_plugin_folder.sh  demo_config.lua  main.lua  plugin.ini  settings.lua
pyinstaller_experiment/: index.html
roadmap/: index.html
scripts/: bootstrap_worktree.sh  demo.py  demo_concept_1.py  demo_concept_1.sh  demo_v1.py  demo_v1.sh  run_benchmark.py
search/: search_index.json
tests/: conftest.py  fix_empty_file_crash_test.sh  test_IAM_OnDB_Dataset.py  test_PageDatasetFromOnline.py  test_XournalDocument.py  test_benchmark.py  test_docker.py  test_empty_file_crash.py  test_inference_models.py  test_installation.py  test_run_htr.py  test_word_detector_postprocessing.py  test_xio.py
user_guide/: index.html
xournalpp_htr/: benchmark.py  configure.py  demo_concept_1.py  documents.py  fix_empty_file_crash_test.sh  inference_models.py  io.py  models.py  pipeline.py  run_htr.py  shortcuts.py  utils.py  xio.py  (+1 more)
xournalpp_htr/training/WordDetectorNN/: .env.example  README.md  demo.py  experiment.ipynb  inference.ipynb  my_code.py  pyproject.toml  requirements.txt  run_training.ipynb  run_training.py  run_training.sh  tests.ipynb
(+94 files in other folders)
